First versione of ex5 in latex

--- a/Home assignment 2/3.tex
+++ b/Home assignment 2/3.tex
@@ -8,7 +8,7 @@ The code used to run the experiments is contained in
 \medskip
 
 \noindent
-\textbf{i) Monte Carlo Estimation of \(\boldsymbol{V^\pi}\).}
+\subsection*{(i) Monte Carlo Estimation of \(\boldsymbol{V^\pi}\)}
 
 \noindent
 We generated \(n=50\) trajectories of length \(T=300\) each, for each possible start state, 
@@ -36,7 +36,7 @@ State & MC Estimate & Exact Value \\
 \end{center}
 
 \noindent
-\textbf{ii) Exact Computation using the Bellman Equation.}
+\subsection*{(ii) Exact Computation using the Bellman Equation}
 
 \noindent
 We also computed the exact value function 
