--- a/Home assignment 2/OReL HA2 Davide Marchi.tex
+++ b/Home assignment 2/OReL HA2 Davide Marchi.tex
@@ -71,7 +71,7 @@
 \input{4.tex}
 
 \section{Off-Policy Evaluation in Episode-Based River-Swim}
-
+\input{5.tex}
 
     
 \bibliography{bibliography}  % If you have some references, use BibTeX
