--- a/Home assignment 2/OReL HA2 Davide Marchi.tex
+++ b/Home assignment 2/OReL HA2 Davide Marchi.tex
@@ -7,6 +7,7 @@
 \usepackage{lipsum}
 \usepackage{booktabs}
 \usepackage{enumitem}
+\usepackage{float}
 
 \usepackage{graphicx}  % For including images
 \usepackage{xcolor}  % For a colorfull presentation
