--- a/Home assignment 2/1.tex
+++ b/Home assignment 2/1.tex
@@ -26,7 +26,7 @@ Determine whether each statement below is True or False and provide a very brief
     Hence it is incorrect to say that \emph{any} optimal policy $\pi$ must be purely state-dependent (stationary).
 
   \item \textbf{Statement:}
-    \emph{``n a finite discounted MDP, a greedy policy with respect to optimal action-value
+    \emph{``In a finite discounted MDP, a greedy policy with respect to optimal action-value
     function, $Q^\ast$, corresponds to an optimal policy.''}
 
     \textbf{Answer: True.}
@@ -40,6 +40,6 @@ Determine whether each statement below is True or False and provide a very brief
     \emph{``Under the coverage assumption, the Weighted Importance Sampling Estimator $\widehat{V}_{\mathrm{wIS}}$ converges to $V^\pi$ with probability 1.''}
 
     \textbf{Answer: True.}
-    The coverage assumption ensures that the target policy's state-action probabilities are absolutely continuous w.r.t.\ the behavior policy. Under this assumption, Weighted Importance Sampling (though slightly biased) is a \emph{consistent} estimator of $V^\pi$, meaning it converges almost surely to $V^\pi$ as the sample size grows unbounded.
+    The coverage assumption ensures that the target policy's state-action probabilities are absolutely continuous w.r.t.\ the behavior policy. Under this assumption, Weighted Importance Sampling (though slightly biased) is a \emph{consistent} estimator of $V^\pi$, meaning it converges to $V^\pi$ as the sample size grows unbounded.
 
 \end{enumerate}
