--- a/Home assignment 2/5.tex
+++ b/Home assignment 2/5.tex
@@ -41,7 +41,7 @@ When we apply these four estimators to the data in \texttt{dataset0.csv}, we obt
     \caption{Estimates of $V^\pi(s_{\text{init}})$ on \texttt{dataset0.csv}.}
     \label{tab:estimates-dataset0}
 \end{table}
-In addition, we solve the linear system
+In addition, I solved the linear system
 \[
     \bigl(I - \gamma P^\pi\bigr)\,V \;=\; r^\pi
 \]
